# readitdeep

./: .env.docker.example  .env.example  .gitignore  .pids  .pids 2  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  LICENSE_CN  PRD.md  README.md  docker-compose.ghcr.yml  docker-compose.yml  docker-deploy-ghcr.sh  docker-load-images.sh  docker-start.sh  docker-stop.sh  implementation_plan.md  install-docker.sh  start.sh  stop.sh  verify_isolation.py
backend/: Dockerfile  README.md  check_env.py  check_latest_error.py  debug_config.py  debug_paper.py  debug_regex.py  debug_regex_mock.py  entrypoint.sh  fix_paper_status.py  pyproject.toml  test_db_connection.py  test_status.py  test_upload.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  graph.py  nodes.py  prompt_loader.py  prompts.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config_manager.py  database.py  store.py  token_tracker.py  workbench_store.py
backend/app/models/: __init__.py  annotation.py  author_cache.py  invitation_code.py  paper.py  paper_analysis.py  prompt.py  reading_task.py  share_link.py  system_config.py  team.py  user.py  user_config.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  analysis.py  classification.py  embedding.py  mineru.py  openalex.py  reference_analysis.py  (+4 more)
backend/data/: papers.json  papers.json.bak  token_stats.json  workbench.json
backend/scripts/: add_prompt_tables.py  add_quota_fields.py  create_admin.py  migrate_db.py  migrate_to_uuid.py
(+112 files in other folders)
